--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>온라인강의 통합시스템 - (주)조은캠프</title>
-
-    <!-- Favicon -->
-    <link href="/assets/img/favicon.png" rel="icon" />
-    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
-
-    <!-- Vendor CSS -->
-    <link href="/assets/vendor/animate.css/animate.min.css" rel="stylesheet" />
-    <link href="/assets/vendor/aos/aos.css" rel="stylesheet" />
-    <link
-      href="/assets/vendor/bootstrap/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/assets/vendor/boxicons/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
-    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-
-    <!-- Main CSS -->
-    <link href="/assets/css/nucleo-icons.css" rel="stylesheet" />
-    <link href="/assets/css/style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="root"></div>
-
-    <!-- Vendor JS -->
-    <script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="/assets/vendor/aos/aos.js"></script>
-    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="/assets/vendor/php-email-form/validate.js"></script>
-
-    <!-- Main JS -->
-    <script src="/assets/js/main.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="ko"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>온라인강의 통합시스템 - (주)조은캠프</title><link href="/assets/img/favicon.png" rel="icon"/><link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon"/><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet"/><link href="/assets/vendor/animate.css/animate.min.css" rel="stylesheet"/><link href="/assets/vendor/aos/aos.css" rel="stylesheet"/><link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"/><link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"/><link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet"/><link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet"/><link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"/><link href="/assets/css/nucleo-icons.css" rel="stylesheet"/><link href="/assets/css/style.css" rel="stylesheet"/><script defer="defer" src="/static/js/main.a3977222.js"></script><link href="/static/css/main.6ca01bd8.css" rel="stylesheet"></head><body><div id="root"></div><script src="/assets/vendor/purecounter/purecounter_vanilla.js"></script><script src="/assets/vendor/aos/aos.js"></script><script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script><script src="/assets/vendor/swiper/swiper-bundle.min.js"></script><script src="/assets/vendor/php-email-form/validate.js"></script><script src="/assets/js/main.js"></script></body></html>
